[gd_scene load_steps=9 format=2]

[ext_resource path="res://art/spaghetti_background.jpg" type="Texture2D" id=1]
[ext_resource path="res://fonts/DroidSans.ttf" type="FontFile" id=2]
[ext_resource path="res://Options.gd" type="Script" id=3]

[sub_resource type="FontFile" id=1]
size = 18
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="Theme" id=3]

[sub_resource type="FontFile" id=5]
size = 18
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=4]
size = 18
outline_size = 2
font_data = ExtResource( 2 )

[node name="Options" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 480.0
offset_bottom = 720.0
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true

[node name="lblSprite" type="Label" parent="."]
offset_left = 76.0
offset_top = 96.0
offset_right = 222.0
offset_bottom = 136.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "Select Character:"
align = 1
valign = 1

[node name="optSprite" type="OptionButton" parent="."]
offset_left = 224.0
offset_top = 104.0
offset_right = 400.0
offset_bottom = 152.0
theme = SubResource( 2 )
text = "Torler Kurnz"
align = 1
items = [ "Torler Kurnz", null, false, 0, null, "Doland Drumpf", null, false, 1, null, "WaaElon", null, false, 2, null, "Pope", null, false, 3, null, "Dr Drew", null, false, 4, null ]
selected = 0

[node name="optDifficulty" type="OptionButton" parent="optSprite"]
show_behind_parent = true
offset_top = 72.0
offset_right = 176.0
offset_bottom = 112.0
theme = SubResource( 3 )
text = "EASY"
align = 1
items = [ "EASY", null, false, 0, null, "MEDIUM", null, false, 1, null, "HARD", null, false, 2, null, "EXTREME", null, false, 3, null ]
selected = 0

[node name="chkMusic" type="CheckButton" parent="optSprite/optDifficulty"]
offset_top = 144.0
offset_right = 76.0
offset_bottom = 184.0

[node name="chkSFX" type="CheckButton" parent="optSprite/optDifficulty"]
offset_top = 88.0
offset_right = 76.0
offset_bottom = 128.0

[node name="lblDifficulty" type="Label" parent="."]
offset_left = 88.0
offset_top = 184.0
offset_right = 219.0
offset_bottom = 206.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 1 )
text = "Select Difficulty:"

[node name="lblMusic" type="Label" parent="."]
offset_left = 160.0
offset_top = 328.0
offset_right = 213.0
offset_bottom = 350.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 5 )
text = "Music:"
align = 1
valign = 1

[node name="lblSFX" type="Label" parent="."]
offset_left = 104.0
offset_top = 264.0
offset_right = 220.0
offset_bottom = 296.0
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = SubResource( 4 )
text = "Sound Effects:"
align = 1
valign = 1

[node name="btnBack" type="Button" parent="."]
anchor_right = 0.012
anchor_bottom = 0.011
offset_left = 128.0
offset_top = 576.0
offset_right = 378.24
offset_bottom = 628.08
text = "MAIN MENU"

[connection signal="item_selected" from="optSprite" to="." method="_on_optSprite_item_selected"]
[connection signal="item_selected" from="optSprite/optDifficulty" to="." method="_on_optDifficulty_item_selected"]
[connection signal="toggled" from="optSprite/optDifficulty/chkMusic" to="." method="_on_chkMusic_toggled"]
[connection signal="toggled" from="optSprite/optDifficulty/chkSFX" to="." method="_on_chkSFX_toggled"]
[connection signal="pressed" from="btnBack" to="." method="_on_btnBack_pressed"]
